[package]
name = "move-compiler"
version = "0.1.0"
authors = ["Dmitry Brook <dmitrii_bryuhanov@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs = "0.1"
diem-types = { version = "0.0.1", git = "https://github.com/xp-network/diem", branch = "main" }
hex = "0.4"
reqwest = { version = "0.11", optional = true }
reusable-fmt = "0.1.2"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[features]
default = [ "std", "test_generated" ]
test_generated = []
std = [ "reqwest", "tokio" ]
